--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,13 @@
 public-hoist-pattern[]=!*
+# https://github.com/nrwl/nx/issues/19202
+public-hoist-pattern[]=nx-lifecycle
+public-hoist-pattern[]=npm-nx-lifecycle
+public-hoist-pattern[]=nx-tsc
+public-hoist-pattern[]=npm-nx-tsc
+public-hoist-pattern[]=nx-populate-files
+public-hoist-pattern[]=npm-nx-populate-files
+public-hoist-pattern[]=nx-update-ts-references
+public-hoist-pattern[]=npm-nx-update-ts-references
+
 dedupe-peer-dependents=false
 link-workspace-packages=false
