--- a/apps/nx-lifecycle/package.json
+++ b/apps/nx-lifecycle/package.json
@@ -36,24 +36,24 @@
   },
   "dependencies": {
     "ajv": "^8.12.0",
-    "ci-info": "^3.8.0",
+    "ci-info": "^4.0.0",
     "default-import": "workspace:^",
+    "fast-equals": "^5.0.1",
     "juniper": "workspace:^"
   },
   "optionalDependencies": {
-    "@nx/devkit": "^16.7.4"
+    "@nx/devkit": "^17.0.2"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.5",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.5.7",
-    "chai": "^4.3.8",
-    "mocha": "^10.2.0",
+    "@types/chai": "^4.3.9",
+    "@types/mocha": "^10.0.3",
+    "@types/node": "^20.8.10",
+    "chai": "^4.3.10",
     "load-populate-files": "workspace:^",
+    "mocha": "^10.2.0",
     "nx-populate-files": "workspace:^",
     "nx-tsc": "workspace:^",
     "nyc": "^15.1.0",
     "typescript": "^5.2.2"
   }
 }
-
