--- a/package.json
+++ b/package.json
@@ -25,27 +25,26 @@
     "prettier:fix": "pnpm run prettier -- --write"
   },
   "devDependencies": {
-    "@eslint/js": "^8.47.0",
-    "@next/eslint-plugin-next": "^13.4.13",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
-    "eslint": "^8.47.0",
+    "@eslint/js": "^8.52.0",
+    "@next/eslint-plugin-next": "^14.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-jsdoc": "^46.4.6",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsdoc": "^46.8.2",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-n": "^16.0.1",
-    "eslint-plugin-react": "^7.33.1",
+    "eslint-plugin-n": "^16.2.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-sonarjs": "^0.20.0",
-    "eslint-plugin-unicorn": "^48.0.1",
+    "eslint-plugin-sonarjs": "^0.21.0",
+    "eslint-plugin-unicorn": "^49.0.0",
     "jacobley": "workspace:^",
-    "npm-nx-tsc": "npm:nx-tsc@^0.0.2",
-    "npm-nx-populate-files": "npm:nx-populate-files@^0.0.2",
-    "nx": "16.7.4",
+    "nx": "17.0.2",
+    "nx-lifecycle": "workspace:^",
     "nx-populate-files": "workspace:^",
-    "nx-update-ts-references": "workspace:^",
     "nx-tsc": "workspace:^",
-    "typescript": "^5.2.2"
+    "nx-update-ts-references": "workspace:^",
+    "vscode-ts": "npm:typescript@^5.2.2"
   }
 }
