--- a/tools/normalized-react-query/package.json
+++ b/tools/normalized-react-query/package.json
@@ -33,20 +33,22 @@
     }
   },
   "devDependencies": {
-    "@tanstack/react-query": "^4.32.6",
+    "@tanstack/react-query": "^5.4.3",
     "@testing-library/react-hooks": "^8.0.1",
-    "@types/chai": "^4.3.5",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.5.7",
-    "@types/react": "^18.2.20",
-    "@types/sinon": "^10.0.16",
-    "chai": "^4.3.8",
-    "expect-type": "^0.16.0",
+    "@types/chai": "^4.3.9",
+    "@types/mocha": "^10.0.3",
+    "@types/node": "^20.8.10",
+    "@types/react": "^18.2.33",
+    "@types/sinon": "^10.0.20",
+    "chai": "^4.3.10",
+    "expect-type": "^0.17.3",
     "mocha": "^10.2.0",
+    "nx-tsc": "workspace:^",
+    "nx-update-ts-references": "workspace:^",
     "nyc": "^15.1.0",
     "react": "^18.2.0",
     "react-test-renderer": "^18.2.0",
-    "sinon": "^15.2.0",
+    "sinon": "^17.0.0",
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
