--- a/apps/juniper/package.json
+++ b/apps/juniper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "juniper",
-  "version": "1.1.9",
+  "version": "1.1.10",
   "description": "ESM JSON Schema builder for static Typescript inference.",
   "engines": {
     "node": ">=18"
@@ -40,17 +40,19 @@
     "escape-string-regexp": "^5.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.5",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.5.7",
-    "@types/sinon": "^10.0.16",
+    "@types/chai": "^4.3.9",
+    "@types/mocha": "^10.0.3",
+    "@types/node": "^20.8.10",
+    "@types/sinon": "^10.0.20",
     "ajv": "^8.12.0",
-    "chai": "^4.3.8",
+    "chai": "^4.3.10",
     "default-import": "workspace:^",
-    "expect-type": "^0.16.0",
+    "expect-type": "^0.17.3",
     "mocha": "^10.2.0",
+    "nx-tsc": "workspace:^",
+    "nx-update-ts-references": "workspace:^",
     "nyc": "^15.1.0",
-    "sinon": "^15.2.0",
+    "sinon": "^17.0.0",
     "typescript": "^5.2.2"
   }
 }
