--- a/apps/nx-update-ts-references/package.json
+++ b/apps/nx-update-ts-references/package.json
@@ -27,20 +27,24 @@
     }
   },
   "dependencies": {
-    "ci-info": "^3.8.0",
-    "json5": "^2.2.3"
+    "ajv": "^8.12.0",
+    "ci-info": "^4.0.0",
+    "comment-json": "^4.2.3",
+    "npm-default-import": "npm:default-import@^1.1.5",
+    "npm-juniper": "npm:juniper@^1.1.10"
   },
   "optionalDependencies": {
-    "@nx/devkit": "^16.7.4",
-    "juniper": "workspace:^"
+    "@nx/devkit": "^17.0.2"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.5",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.5.7",
-    "chai": "^4.3.8",
-    "load-populate-files": "workspace:^",
+    "@types/chai": "^4.3.9",
+    "@types/mocha": "^10.0.3",
+    "@types/node": "^20.8.10",
+    "chai": "^4.3.10",
     "mocha": "^10.2.0",
+    "npm-load-populate-files": "npm:load-populate-files@^0.0.1",
+    "npm-nx-populate-files": "npm:nx-populate-files@^0.0.2",
+    "nx-tsc": "workspace:^",
     "nyc": "^15.1.0",
     "typescript": "^5.2.2"
   }
