--- a/apps/nx-update-ts-references/tsconfig.json
+++ b/apps/nx-update-ts-references/tsconfig.json
@@ -4,5 +4,10 @@
     "outDir": "dist",
     "rootDir": "src",
     "tsBuildInfoFile": "dist/tsconfig.tsbuildinfo"
-  }
+  },
+  "references": [
+    {
+      "path": "../../tools/nx-tsc"
+    }
+  ]
 }
