--- a/apps/rivendell/package.json
+++ b/apps/rivendell/package.json
@@ -51,20 +51,22 @@
     "minimatch": "^9.0.3",
     "named-patch": "workspace:^",
     "parse-cwd": "workspace:^",
-    "yaml": "^2.3.1",
+    "yaml": "^2.3.3",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.5",
+    "@types/chai": "^4.3.9",
     "@types/minimatch": "^5.1.2",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.5.7",
-    "@types/sinon": "^10.0.16",
-    "@types/yargs": "^17.0.24",
-    "chai": "^4.3.8",
+    "@types/mocha": "^10.0.3",
+    "@types/node": "^20.8.10",
+    "@types/sinon": "^10.0.20",
+    "@types/yargs": "^17.0.29",
+    "chai": "^4.3.10",
     "mocha": "^10.2.0",
+    "nx-tsc": "workspace:^",
+    "nx-update-ts-references": "workspace:^",
     "nyc": "^15.1.0",
-    "sinon": "^15.2.0",
+    "sinon": "^17.0.0",
     "typescript": "^5.2.2"
   }
 }
