--- a/tools/nx-tsc/package.json
+++ b/tools/nx-tsc/package.json
@@ -27,19 +27,21 @@
     }
   },
   "optionalDependencies": {
-    "@nx/devkit": "^16.7.4",
-    "npm-juniper": "npm:juniper@^1.1.9"
+    "@nx/devkit": "^17.0.2",
+    "npm-juniper": "npm:juniper@^1.1.10"
   },
   "peerDependencies": {
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.5",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.5.7",
-    "chai": "^4.3.8",
+    "@types/chai": "^4.3.9",
+    "@types/mocha": "^10.0.3",
+    "@types/node": "^20.8.10",
+    "chai": "^4.3.10",
     "mocha": "^10.2.0",
     "npm-load-populate-files": "npm:load-populate-files@^0.0.1",
+    "npm-nx-populate-files": "npm:nx-populate-files@^0.0.2",
+    "npm-nx-tsc": "npm:nx-tsc@^0.0.2",
     "nyc": "^15.1.0"
   }
 }
