--- a/tools/packages-list/package.json
+++ b/tools/packages-list/package.json
@@ -39,19 +39,21 @@
     "named-patch": "workspace:^",
     "parse-cwd": "workspace:^",
     "root-package-json": "workspace:^",
-    "which": "^3.0.1"
+    "which": "^4.0.0"
   },
   "devDependencies": {
-    "@microsoft/rush-lib": "^5.101.1",
-    "@types/chai": "^4.3.5",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.5.7",
-    "@types/sinon": "^10.0.16",
-    "@types/which": "^3.0.0",
-    "chai": "^4.3.8",
+    "@microsoft/rush-lib": "^5.110.0",
+    "@types/chai": "^4.3.9",
+    "@types/mocha": "^10.0.3",
+    "@types/node": "^20.8.10",
+    "@types/sinon": "^10.0.20",
+    "@types/which": "^3.0.1",
+    "chai": "^4.3.10",
     "mocha": "^10.2.0",
+    "nx-tsc": "workspace:^",
+    "nx-update-ts-references": "workspace:^",
     "nyc": "^15.1.0",
-    "sinon": "^15.2.0",
+    "sinon": "^17.0.0",
     "typescript": "^5.2.2"
   }
 }
