--- a/tools/punycode-esm/package.json
+++ b/tools/punycode-esm/package.json
@@ -33,11 +33,13 @@
     }
   },
   "devDependencies": {
-    "@types/chai": "^4.3.5",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.5.7",
-    "chai": "^4.3.8",
+    "@types/chai": "^4.3.9",
+    "@types/mocha": "^10.0.3",
+    "@types/node": "^20.8.10",
+    "chai": "^4.3.10",
     "mocha": "^10.2.0",
+    "nx-tsc": "workspace:^",
+    "nx-update-ts-references": "workspace:^",
     "nyc": "^15.1.0",
     "typescript": "^5.2.2"
   }
