--- a/apps/nx-lifecycle/.npmignore
+++ b/apps/nx-lifecycle/.npmignore
@@ -3,13 +3,13 @@ tsconfig.json
 
 dist/tsconfig.tsbuildinfo
 dist/**/*.map
+dist/**/*.spec.*js
 
 src/**
+!src/executors/lifecycle/schema.json
 
 dist/file-content.js
 dist/file-content.d.ts
 
 dist/executors/lifecycle/schema.js
 dist/executors/lifecycle/schema.d.ts
-
-!src/executors/lifecycle/schema.json
